--- a/WonInfo/app/src/main/res/layout/home_main_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/home_main_list_item.xml
@@ -10,7 +10,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="1px"
         android:background="@color/Theme_Gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
