--- a/WonInfo/app/src/main/res/drawable/all_item_market_subclass.xml
+++ b/WonInfo/app/src/main/res/drawable/all_item_market_subclass.xml
@@ -8,6 +8,6 @@
         android:endColor="@color/Theme_LightGray"
         android:startColor="@color/Theme_LightGray" />
     <stroke
-        android:width="1dp"
+        android:width="1px"
         android:color="#D5D5D5" />
 </shape>
