--- a/WonInfo/app/src/main/res/layout/nav_header_loggedout.xml
+++ b/WonInfo/app/src/main/res/layout/nav_header_loggedout.xml
@@ -10,7 +10,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/nav_imageview_defalt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -24,7 +24,7 @@
         app:srcCompat="@mipmap/ic_appicon_round" />
 
     <Button
-        android:id="@+id/login_btn_login"
+        android:id="@+id/nav_btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -36,15 +36,15 @@
         android:text="로그인"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/nav_imageview_defalt" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/nav_imageview_setting"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/nav_imageview_defalt"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_settings" />
 
