--- a/WonInfo/app/src/main/res/layout/developer_page.xml
+++ b/WonInfo/app/src/main/res/layout/developer_page.xml
@@ -5,11 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/dev"
     >
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/user_text_woninfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
