한솔 community_main_fragment 빼고 community xml 나머지 id 바꿈 setting id 바꿈

--- a/WonInfo/app/src/main/res/drawable/item_round_box.xml
+++ b/WonInfo/app/src/main/res/drawable/item_round_box.xml
@@ -8,6 +8,6 @@
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp" />
     <stroke
-        android:width="2dp"
+        android:width="2px"
         android:color="#EAEAEA" />
 </shape>
