--- a/WonInfo/app/src/main/res/drawable/all_ripple_click_roundrectanglebox.xml
+++ b/WonInfo/app/src/main/res/drawable/all_ripple_click_roundrectanglebox.xml
@@ -10,7 +10,7 @@
                 android:topLeftRadius="0dp"
                 android:topRightRadius="0dp" />
             <stroke
-                android:width="1dp"
+                android:width="1px"
                 android:color="#D5D5D5" />
             <solid android:color="#ffffff" /> <!-- background color -->
         </shape>
