--- a/WonInfo/app/src/main/res/layout/community_item_document.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_document.xml
@@ -106,7 +106,7 @@
                             app:layout_constraintTop_toBottomOf="@+id/community_board1_title" />
 
                         <ImageView
-                            android:id="@+id/imageView8"
+                            android:id="@+id/community_list_item_comment"
                             android:layout_width="18dp"
                             android:layout_height="18dp"
                             android:layout_marginEnd="4dp"
@@ -128,7 +128,7 @@
                             app:layout_constraintTop_toBottomOf="@+id/community_board1_content" />
 
                         <ImageView
-                            android:id="@+id/imageView10"
+                            android:id="@+id/community_list_img_like"
                             android:layout_width="18dp"
                             android:layout_height="18dp"
                             android:layout_marginEnd="4dp"
@@ -148,8 +148,8 @@
                             android:textColor="@color/Theme_Red"
                             android:textSize="@dimen/bigtitle_size"
                             android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-                            app:layout_constraintEnd_toStartOf="@+id/imageView8" />
+                            app:layout_constraintBottom_toBottomOf="@+id/community_list_item_comment"
+                            app:layout_constraintEnd_toStartOf="@+id/community_list_item_comment" />
 
                         <LinearLayout
                             android:id="@+id/community_layout_image"
