--- a/WonInfo/app/src/main/res/layout/community_market_write3.xml
+++ b/WonInfo/app/src/main/res/layout/community_market_write3.xml
@@ -107,7 +107,7 @@
                             app:layout_constraintTop_toBottomOf="@+id/community_market_title" />
 
                         <ImageView
-                            android:id="@+id/market_imageView8"
+                            android:id="@+id/community_list_item_comment"
                             android:layout_width="18dp"
                             android:layout_height="18dp"
                             android:layout_marginEnd="4dp"
