--- a/WonInfo/app/src/main/res/layout/community_item_document.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_document.xml
@@ -100,7 +100,7 @@
                                 android:layout_marginTop="10dp"
                                 android:text="id"
                                 android:textColor="@color/Theme_Black"
-                                android:textSize="@dimen/font_all_large_17sp"
+                                android:textSize="@dimen/font_17sp"
                                 android:textStyle="bold"
                                 app:layout_constraintStart_toEndOf="@+id/community_board1_profile"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -127,7 +127,7 @@
                                 android:layout_marginEnd="16dp"
                                 android:text="title"
                                 android:textColor="@color/Theme_Black"
-                                android:textSize="@dimen/font_all_large_17sp"
+                                android:textSize="@dimen/font_17sp"
                                 android:textStyle="bold"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +164,7 @@
                                 android:layout_marginEnd="12dp"
                                 android:text="0"
                                 android:textColor="@color/Theme_Blue"
-                                android:textSize="@dimen/font_all_middle_14sp"
+                                android:textSize="@dimen/font_14sp"
                                 android:textStyle="bold"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/community_board1_content" />
@@ -188,7 +188,7 @@
                                 android:layout_weight="1"
                                 android:text="0"
                                 android:textColor="@color/Theme_Red"
-                                android:textSize="@dimen/font_all_middle_14sp"
+                                android:textSize="@dimen/font_14sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView8" />
