--- a/WonInfo/app/src/main/res/layout/popup_write.xml
+++ b/WonInfo/app/src/main/res/layout/popup_write.xml
@@ -8,10 +8,9 @@
     android:background="@drawable/item_round_box">
 
     <TextView
-        android:id="@+id/popup_write_textView"
+        android:id="@+id/write_text_maintext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/login_btn_submit"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
@@ -26,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/popup_write_canclebtn"
+        android:id="@+id/write_btn_cancel"
         android:layout_width="129dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -40,10 +39,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/popup_write_textView" />
+        app:layout_constraintTop_toBottomOf="@+id/write_text_maintext" />
 
     <Button
-        android:id="@+id/popup_write_okbtn"
+        android:id="@+id/write_btn_yes"
         android:layout_width="129dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -58,8 +57,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/popup_write_canclebtn"
-        app:layout_constraintTop_toBottomOf="@+id/popup_write_textView"
+        app:layout_constraintStart_toEndOf="@+id/write_btn_cancel"
+        app:layout_constraintTop_toBottomOf="@+id/write_text_maintext"
         app:layout_constraintVertical_bias="1.0" />
 
 
